--- a/web/src/style/desktopWeb/_accessibility.scss
+++ b/web/src/style/desktopWeb/_accessibility.scss
@@ -32,7 +32,18 @@
 }
 
 @mixin linkHoverStyle {
-  background-color: $hover_highlight;
-  box-shadow: 0 0 0 4px $hover_highlight;
-  color: $black;
+  background: $hover_highlight; 
+    box-shadow: 0 0 0 4px $hover_highlight; 
+    color: $black; 
+    width: auto;
+    text-decoration: underline;
+}
+
+
+@mixin linkFocusStyle {
+  background: $focus_highlight; 
+    box-shadow: 0 0 0 4px $focus_highlight; 
+    color: $black; 
+    outline: 0; 
+    width: auto;
 }
